@@ -4,6 +4,7 @@ Revision history for Catalyst-Controller-DBIC-API: {{ $dist->version }}
 
 - Fixed missing requirement for MooseX::Types::Structured
 - Fixed MooseX::Aliases usage (we don't any more)
+- Object inflation during end was broken out into its own method: each_object_inflate
 
 2.001001
 **************************************************************
